--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-instantsearch-dom": "^6.22.0",
     "react-query": "^3.34.0",
     "sass": "^1.49.7"
   },
